--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
   },
   "require": {
     "php": "^7.2 || ^8.0",
-    "illuminate/support": "~8",
-    "ramsey/uuid": "^4.2.3"
+    "illuminate/support": "~8"
   },
   "extra": {
     "laravel": {
